--- a/index.html
+++ b/index.html
@@ -26,6 +26,8 @@
                 
             </ul>
         </section>
+                <p>Quiz-Program</p>
+<p><a href="https://muhammad5ali.github.io/Quiz-Program-Using-JS/">Quiz-Program-Using-JS</a></p>
         <section id="recent-picture">
             <h2>Recent Picture</h2>
             <img src="pic.png-removebg.png" height="200" width="300" class="left-image" alt="Recent Picture">
