--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
                 
             </ul>
         </section>
-                <p>Quiz-Program</p>
+                <h2>Quiz-Program</h2>
 <p><a href="https://muhammad5ali.github.io/Quiz-Program-Using-JS/">Quiz-Program-Using-JS</a></p>
         <section id="recent-picture">
             <h2>Recent Picture</h2>
